@@ -1,3 +1,13 @@
+2000-11-11  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/alpha/ev5/gmp-mparam.h: Retune.
+
+	* mpn/alpha/ev6/gmp-mparam.h: Retune.
+
+	* mpn/alpha/ev6/add_n.asm: Misc cleanups.
+
+	* mpn/alpha/ev6/sub_n.asm: New file.
+
 2000-11-10  Torbjorn Granlund  <tege@swox.com>
 
 	* configure.in [path switch] (alphaev6*-*-*): Add alpha/ev5 to path.
